@@ -1,3 +1,8 @@
+Sat Sep 16 09:35:26 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bseblockutils.cc: Provide resampler factory method, so that an SSE
+	resampler will be used when beast detects SSE instructions.
+
 Tue Aug 29 20:48:48 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* davorgan.[hc]: Add transpose and fine_tune settings, just like they
